.happypack/s-1798272633
/Users/liuyihao/Code/kr-admin/src/Components/KrField/index.js: Unexpected token (35:1)
SyntaxError: /Users/liuyihao/Code/kr-admin/src/Components/KrField/index.js: Unexpected token (35:1)
[0m [90m 33 | [39m[36mimport[39m [33mDoorCardComponent[39m from [32m'./DoorCardComponent'[39m[33m;[39m
 [90m 34 | [39m[36mimport[39m [33mUploadImageComponent[39m from [32m'./UploadImageComponent'[39m[33m;[39m
[31m[1m>[22m[39m[90m 35 | [39m[33m<<[39m[33m<<[39m[33m<<[39m[33m<[39m [33mHEAD[39m
 [90m    | [39m [31m[1m^[22m[39m
 [90m 36 | [39m
 [90m 37 | [39m[33m===[39m[33m===[39m[33m=[39m
 [90m 38 | [39m[33m>>>[39m[33m>>>[39m[33m>[39m master[0m
    at Parser.pp$5.raise (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:4215:13)
    at Parser.pp.unexpected (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:1599:8)
    at Parser.pp$8.jsxParseIdentifier (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:6098:10)
    at Parser.pp$8.jsxParseNamespacedName (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:6109:19)
    at Parser.pp$8.jsxParseElementName (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:6124:19)
    at Parser.pp$8.jsxParseOpeningElementAt (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:6214:20)
    at Parser.pp$8.jsxParseElementAt (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:6238:29)
    at Parser.pp$8.jsxParseElement (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:6293:15)
    at Parser.parseExprAtom (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:6305:21)
    at Parser.pp$3.parseExprSubscripts (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3305:19)
    at Parser.pp$3.parseMaybeUnary (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3285:19)
    at Parser.pp$3.parseExprOps (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3215:19)
    at Parser.pp$3.parseMaybeConditional (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3192:19)
    at Parser.pp$3.parseMaybeAssign (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3155:19)
    at Parser.parseMaybeAssign (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:5564:24)
    at Parser.pp$3.parseExpression (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3117:19)
    at Parser.pp$1.parseStatement (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:1746:19)
    at Parser.parseStatement (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:5130:22)
    at Parser.pp$1.parseBlockBody (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:2105:21)
    at Parser.pp$1.parseTopLevel (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:1617:8)
    at Parser.parse (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:1509:17)
    at Object.parse$1 [as parse] (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:6371:37)